0.04:
  - Implement ticket deletion
  - Implement ticket refresh method
  - Implement ticket search

0.03:
  - Implement ticket status changes
  - Implement ticket history

0.02:
  - Implement a top-level Net::Redmine API
  - Implement ticket identity mapping using Net::Redmine APIs

0.01:
  _ Implement Ticket creating and loading.