@@ -17,16 +17,11 @@ has note        => (is => "rw", isa => "Str");
 has histories   => (is => "rw", isa => "ArrayRef", lazy_build => 1);
 
 sub create {
-    my ($self, %attr) = @_;
+    my ($class, %attr) = @_;
 
-    if (%attr) {
-        while (my ($k, $v) = each(%attr)) {
-            $self->$k($v);
-        }
-    }
+    my $self = $class->new(%attr);
 
     my $mech = $self->connection->get_new_issue_page()->mechanize;
-
     $mech->form_id("issue-form");
     $mech->field("issue[subject]" => $self->subject);
     $mech->field("issue[description]" => $self->description);
@@ -39,7 +34,7 @@ sub create {
     if ($mech->uri =~ m[/issues(?:/show)?/(\d+)$]) {
         my $id = $1;
         $self->id($id);
-        return $id;
+        return $self;
     }
 }
 
@@ -49,33 +44,33 @@ use HTML::WikiConverter;
 use Encode;
 
 sub load {
-    my ($self, $id) = @_;
+    my ($class, %attr) = @_;
+    die "should specify ticket id when loading it." unless defined $attr{id};
+    die "should specify connection object when loading tickets." unless defined $attr{connection};
 
-    eval '$self->connection->get_issues_page($id)';
-    return if $@;
-
-    my $html = $self->connection->mechanize->content;
-
-    # my $html = io("/tmp/issue.html")->utf8->all;
-
-    my $p = pQuery($html);
-    my $wc = new HTML::WikiConverter( dialect => 'Markdown' );
-    my $description = $wc->html2wiki( Encode::encode_utf8($p->find(".issue .wiki")->html) );
-    my $subject = $p->find(".issue h3")->text;
-    my $status = $p->find(".issue .status")->eq(1)->text;
-
-    $self->id($id);
-    $self->subject($subject);
-    $self->description($description);
-    $self->status($status);
-
-    return $self;
+    my $self = $class->new(%attr);
+    return $self->refresh;
 }
 
 sub refresh {
     my ($self) = @_;
     die "Cannot lookup ticket histories without id.\n" unless $self->id;
-    return $self->load($self->id);
+
+    my $id = $self->id;
+    eval '$self->connection->get_issues_page($id)';
+    return if $@;
+
+    my $p = pQuery($self->connection->mechanize->content);
+    my $wc = new HTML::WikiConverter( dialect => 'Markdown' );
+    my $description = $wc->html2wiki( Encode::encode_utf8($p->find(".issue .wiki")->html) );
+    my $subject = $p->find(".issue h3")->text;
+    my $status = $p->find(".issue .status")->eq(1)->text;
+
+    $self->subject($subject);
+    $self->description($description);
+    $self->status($status);
+
+    return $self;
 }
 
 sub save {
