@@ -14,8 +14,7 @@ TODO: {
 
     local $TODO = "Create a 'Closed' ticket first.";
 
-    my $t = Net::Redmine::Ticket->new(connection => $r->connection);
-    $t->load($id);
+    my $t = Net::Redmine::Ticket->load(connection => $r->connection, id => $id);
 
     is $t->status(), "Closed";
 }
